objects/PMC_CPQ_RawMaterial__c.object
<CustomObject>
    <description>This Object is to store the details of the Blended Components.</description>
    <fields>
        <fullName>PMC_CPQ_Account__c</fullName>
        <description>This field is to show the Account associated with the record.</description>
        <formula>PMC_CPQ_Quote__r.SBQQ__Account__r.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ListCFR__c</fullName>
        <description>This field is to store the List CFR amount.</description>
        <label>List CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductSKU__c</fullName>
        <description>This field is to show the SKU of the Product.</description>
        <formula>PMC_CPQ_Product__r.StockKeepingUnit</formula>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Raw Materials</relationshipLabel>
        <relationshipName>Raw_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuantityTonNumber__c</fullName>
        <label>Quantity (Ton) Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuantityTons__c</fullName>
        <formula>( PMC_CPQ_Quantity__c ) * PMC_CPQ_QuoteLine__r.SBQQ__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Tons</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Quantity__c</fullName>
        <description>This field is to store the returned quantity from the blend optimizer for that component.</description>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to store the respective Quote Line.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Raw Materials</relationshipLabel>
        <relationshipName>Raw_Materials1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to store the Quote associated with the record.</description>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Raw Materials</relationshipLabel>
        <relationshipName>Raw_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RawMaterialName__c</fullName>
        <description>This field is to capture the name of the Raw Material.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Raw Material Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldCFR__c</fullName>
        <description>This field is to store the Sold CFR</description>
        <label>Sold CFR (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Location__c</fullName>
        <formula>PMC_CPQ_QuoteLine__r.PMC_CPQ_ProductLocation__r.PMC_CPQ_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>PMC_CPQ_QuoteLine__r.SBQQ__ProductName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <label>Raw Material</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_CPQ_RawMaterialName__c</columns>
        <columns>PMC_CPQ_SoldCFR__c</columns>
        <columns>PMC_CPQ_ListCFR__c</columns>
        <columns>PMC_CPQ_Quantity__c</columns>
        <columns>PMC_CPQ_QuoteLine__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RM-{0000000000}</displayFormat>
        <label>Raw Material Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Raw Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>